--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "BOBIZMD  - Makes it easy and fun to use Whatsapp.",
     "logo": "https://telegra.ph/file/201b5c02be1e336a29c60.jpg",
     "keywords": ["whatsapp", "userbot", "bobiz", "bot", "ai" , "MD" ],
-    "repository": "https://github.com/bobizbotmd/BOBIZ-MD",
+    "repository": "https://github.com/Idrissbop/bobizdriss",
     "website":   "",
     "success_url": "",
     "stack": "container",
