--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
       },
            "URL_1LINK": {
             "description": "",
-            "value": "http://instagram.com/noureddine_ouafy" ,
+            "value": "http://instagram.com/zexx0.2" ,
             "required": true
       },
      "URL_2NAME": {
@@ -31,7 +31,7 @@
       },
        "URL_2LINK": {
             "description": "",
-            "value": "https://github.com/bobizbotmd/BOBIZ-MD" ,
+            "value": "https://github.com/Idrissbop/bobizdriss" ,
             "required": true
       },
       
@@ -43,46 +43,7 @@
       "ALIVE_LOGO": {
             "description": "add direct image url",
             "value": "https://telegra.ph/file/201b5c02be1e336a29c60.jpg" ,
-            "required": true
-      },
-     
-       "SONG_DOWN": {
-            "description": "song downloading text",
-            "value": "*📥جاري تحميل الأغنية...*" ,
-            "required": true
-      }, 
-        "SONG_UP": {
-            "description": "song uploading text",
-            "value": "*📤جاري ارسال الأغنية او الموسيقى...*" ,
-            "required": true
-      },
-          "VIDEO_DOWN": {
-            "description": "video downloading text",
-            "value": "*📥جاري تحميل الفيديو...*" ,
-            "required": true
-      },
-          "VIDEO_UP": {
-            "description": "video uploading text",
-            "value": "*📤جاري ارسال الفيديو...*" ,
-            "required": true
-      },
-          "FILE_DOWN": {
-            "description": "file downloading text",
-            "value": "*📥جاري تحميل الملف...*" ,
-            "required": true
-      },
-          "FILE_UP": {
-            "description": "file uploading text",
-            "value": "*📤جاري ارسال الملف ...*" ,
-            "required": true
-      },
-          "STIC_WM": {
-            "description": "حقوق الملصق",
-            "value": "BOBIZ-MD" ,
-            "required": true
-      }
-         
-        
+            "required": true   
      },
     "addons": [{
       "plan": "heroku-postgresql"
