--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "success_url": "",
     "stack": "container",
      "env": {
-            "BOBIZ_SESSION": {
+            "BOBIZASESSION": {
             "description": "qr session code",
             "required": true
              },
